crates/tsdi-parser/tests/snapshots/extract_snapshots__async_provides_method_unwraps_promise_to_inner_key.snap
---
source: crates/tsdi-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "database-module.ts",
    modules: [
        ModuleDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "DatabaseModule",
            },
            provides: [
                Binding {
                    key: Class {
                        module: ModulePath {
                            abs: "./pool",
                            original: Some(
                                "./pool",
                            ),
                        },
                        name: "Pool",
                    },
                    provider: ProvidesMethod {
                        module: ClassRef {
                            module: ModulePath {
                                abs: "<self>",
                                original: None,
                            },
                            name: "DatabaseModule",
                        },
                        method: "pool",
                        is_async: true,
                    },
                    scope: Singleton,
                    deps: [
                        Class {
                            module: ModulePath {
                                abs: "./config",
                                original: Some(
                                    "./config",
                                ),
                            },
                            name: "Config",
                        },
                    ],
                    source: SourceSpan {
                        path: "database-module.ts",
                        start: 210,
                        end: 355,
                    },
                    role: None,
                },
            ],
            source: SourceSpan {
                path: "database-module.ts",
                start: 175,
                end: 365,
            },
        },
    ],
    components: [],
    subcomponents: [],
    inject_classes: [],
}
