crates/tsdi-parser/tests/snapshots/extract_snapshots__entry_point_with_set_return_type_parses.snap
---
source: crates/tsdi-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "app.ts",
    modules: [],
    components: [
        ComponentDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "App",
            },
            modules: [],
            scope: Unscoped,
            entry_points: [
                EntryPoint {
                    name: "plugins",
                    key: Set {
                        element: Class {
                            module: ModulePath {
                                abs: "./plugin",
                                original: Some(
                                    "./plugin",
                                ),
                            },
                            name: "Plugin",
                        },
                    },
                    source: SourceSpan {
                        path: "app.ts",
                        start: 171,
                        end: 203,
                    },
                    factory_params: [],
                },
            ],
            source: SourceSpan {
                path: "app.ts",
                start: 138,
                end: 213,
            },
        },
    ],
    subcomponents: [],
    inject_classes: [],
}
