crates/tsdi-parser/tests/snapshots/extract_snapshots__full_coffee_example_in_one_file.snap
---
source: crates/tsdi-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "coffee.ts",
    modules: [
        ModuleDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "CoffeeModule",
            },
            provides: [
                Binding {
                    key: Class {
                        module: ModulePath {
                            abs: "<self>",
                            original: None,
                        },
                        name: "Heater",
                    },
                    provider: ProvidesMethod {
                        module: ClassRef {
                            module: ModulePath {
                                abs: "<self>",
                                original: None,
                            },
                            name: "CoffeeModule",
                        },
                        method: "provideTimer",
                    },
                    scope: Unscoped,
                    deps: [],
                    source: SourceSpan {
                        path: "coffee.ts",
                        start: 356,
                        end: 420,
                    },
                    role: None,
                },
            ],
            source: SourceSpan {
                path: "coffee.ts",
                start: 323,
                end: 430,
            },
        },
    ],
    components: [
        ComponentDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "CoffeeShop",
            },
            modules: [
                ClassRef {
                    module: ModulePath {
                        abs: "<self>",
                        original: None,
                    },
                    name: "CoffeeModule",
                },
            ],
            scope: Unscoped,
            entry_points: [
                EntryPoint {
                    name: "pump",
                    key: Class {
                        module: ModulePath {
                            abs: "<self>",
                            original: None,
                        },
                        name: "Pump",
                    },
                    source: SourceSpan {
                        path: "coffee.ts",
                        start: 535,
                        end: 557,
                    },
                },
            ],
            source: SourceSpan {
                path: "coffee.ts",
                start: 495,
                end: 567,
            },
        },
    ],
    subcomponents: [],
    inject_classes: [
        Binding {
            key: Class {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "Heater",
            },
            provider: InjectCtor {
                class: ClassRef {
                    module: ModulePath {
                        abs: "<self>",
                        original: None,
                    },
                    name: "Heater",
                },
            },
            scope: Singleton,
            deps: [],
            source: SourceSpan {
                path: "coffee.ts",
                start: 158,
                end: 174,
            },
            role: None,
        },
        Binding {
            key: Class {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "Pump",
            },
            provider: InjectCtor {
                class: ClassRef {
                    module: ModulePath {
                        abs: "<self>",
                        original: None,
                    },
                    name: "Pump",
                },
            },
            scope: Unscoped,
            deps: [
                Class {
                    module: ModulePath {
                        abs: "<self>",
                        original: None,
                    },
                    name: "Heater",
                },
            ],
            source: SourceSpan {
                path: "coffee.ts",
                start: 242,
                end: 280,
            },
            role: None,
        },
    ],
}
