crates/tsdi-parser/tests/snapshots/extract_snapshots__module_with_into_set_provides.snap
---
source: crates/tsdi-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "plugins-module.ts",
    modules: [
        ModuleDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "PluginsModule",
            },
            provides: [
                Binding {
                    key: Class {
                        module: ModulePath {
                            abs: "./plugin",
                            original: Some(
                                "./plugin",
                            ),
                        },
                        name: "Plugin",
                    },
                    provider: ProvidesMethod {
                        module: ClassRef {
                            module: ModulePath {
                                abs: "<self>",
                                original: None,
                            },
                            name: "PluginsModule",
                        },
                        method: "auth",
                    },
                    scope: Unscoped,
                    deps: [],
                    source: SourceSpan {
                        path: "plugins-module.ts",
                        start: 278,
                        end: 347,
                    },
                    role: IntoSet,
                },
                Binding {
                    key: Class {
                        module: ModulePath {
                            abs: "./plugin",
                            original: Some(
                                "./plugin",
                            ),
                        },
                        name: "Plugin",
                    },
                    provider: ProvidesMethod {
                        module: ClassRef {
                            module: ModulePath {
                                abs: "<self>",
                                original: None,
                            },
                            name: "PluginsModule",
                        },
                        method: "logging",
                    },
                    scope: Unscoped,
                    deps: [],
                    source: SourceSpan {
                        path: "plugins-module.ts",
                        start: 360,
                        end: 435,
                    },
                    role: IntoSet,
                },
            ],
            source: SourceSpan {
                path: "plugins-module.ts",
                start: 244,
                end: 445,
            },
        },
    ],
    components: [],
    subcomponents: [],
    inject_classes: [],
}
