crates/tsdi-parser/tests/snapshots/extract_snapshots__module_with_provides.snap
---
source: crates/tsdi-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "coffee_module.ts",
    modules: [
        ModuleDecl {
            class: ClassRef {
                module: ModulePath(
                    "<self>",
                ),
                name: "CoffeeModule",
            },
            provides: [
                Binding {
                    key: Class {
                        module: ModulePath(
                            "./pump",
                        ),
                        name: "Pump",
                    },
                    provider: ProvidesMethod {
                        module: ClassRef {
                            module: ModulePath(
                                "<self>",
                            ),
                            name: "CoffeeModule",
                        },
                        method: "providePump",
                    },
                    scope: Unscoped,
                    deps: [],
                    source: SourceSpan {
                        path: "coffee_module.ts",
                        start: 154,
                        end: 213,
                    },
                    role: None,
                },
            ],
            source: SourceSpan {
                path: "coffee_module.ts",
                start: 121,
                end: 223,
            },
        },
    ],
    components: [],
    subcomponents: [],
    inject_classes: [],
}
