crates/tsdi-parser/tests/snapshots/extract_snapshots__singleton_class_with_inject_ctor.snap
---
source: crates/tsdi-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "heater.ts",
    modules: [],
    components: [],
    subcomponents: [],
    inject_classes: [
        Binding {
            key: Class {
                module: ModulePath(
                    "<self>",
                ),
                name: "Heater",
            },
            provider: InjectCtor {
                class: ClassRef {
                    module: ModulePath(
                        "<self>",
                    ),
                    name: "Heater",
                },
            },
            scope: Singleton,
            deps: [],
            source: SourceSpan {
                path: "heater.ts",
                start: 129,
                end: 145,
            },
        },
    ],
}
