crates/tsdi-parser/tests/snapshots/extract_snapshots__subcomponent_factory_with_typed_parameters.snap
---
source: crates/tsdi-parser/tests/extract_snapshots.rs
expression: parsed
---
ParsedFile {
    path: "app.ts",
    modules: [],
    components: [
        ComponentDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "App",
            },
            modules: [],
            scope: Unscoped,
            entry_points: [
                EntryPoint {
                    name: "requestComponent",
                    key: Class {
                        module: ModulePath {
                            abs: "<self>",
                            original: None,
                        },
                        name: "RequestComponent",
                    },
                    source: SourceSpan {
                        path: "app.ts",
                        start: 410,
                        end: 491,
                    },
                    factory_params: [
                        FactoryParam {
                            name: "req",
                            key: Class {
                                module: ModulePath {
                                    abs: "<self>",
                                    original: None,
                                },
                                name: "HttpRequest",
                            },
                            source: SourceSpan {
                                path: "app.ts",
                                start: 436,
                                end: 452,
                            },
                        },
                        FactoryParam {
                            name: "res",
                            key: Class {
                                module: ModulePath {
                                    abs: "<self>",
                                    original: None,
                                },
                                name: "HttpResponse",
                            },
                            source: SourceSpan {
                                path: "app.ts",
                                start: 454,
                                end: 471,
                            },
                        },
                    ],
                },
            ],
            source: SourceSpan {
                path: "app.ts",
                start: 377,
                end: 501,
            },
        },
    ],
    subcomponents: [
        SubcomponentDecl {
            class: ClassRef {
                module: ModulePath {
                    abs: "<self>",
                    original: None,
                },
                name: "RequestComponent",
            },
            modules: [],
            scope: Unscoped,
            entry_points: [
                EntryPoint {
                    name: "handler",
                    key: Class {
                        module: ModulePath {
                            abs: "<self>",
                            original: None,
                        },
                        name: "RequestHandler",
                    },
                    source: SourceSpan {
                        path: "app.ts",
                        start: 279,
                        end: 314,
                    },
                    factory_params: [],
                },
            ],
            source: SourceSpan {
                path: "app.ts",
                start: 233,
                end: 324,
            },
        },
    ],
    inject_classes: [],
}
